--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 
 <footer>
     Powered by LIGONE – Fair Consumer Technology
+    <div style="margin-top:12px;">
+    <a href="stiftung.html" 
+       style="color:#0077cc; text-decoration:none; font-size:14px;">
+       Geplante LIGONE Stiftung (ab 2026)
+    </a>
+</div>
+
 </footer>
 
 </body>
