--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
     <a href="https://ligone-token.github.io/ligone-web/" target="_blank">Token App</a> |
     <a href="#/about-ligone">Über LIGONE</a>
 </div>
+<div class="category-grid">
+
+    <div class="cat-item">Kosmetik</div>
+    <div class="cat-item">Lebensmittel</div>
+    <div class="cat-item">Haushalt</div>
+    <div class="cat-item">Schadstoffe</div>
+    <div class="cat-item">Naturmittel</div>
+    <div class="cat-item">Reisen</div>
+    <div class="cat-item">Auto & Ersatzteile</div>
+    <div class="cat-item">Finanzen</div>
+    <div class="cat-item">Technik</div>
+    <div class="cat-item">Buchtipps</div>
+    <div class="cat-item">Sehenswürdigkeiten</div>
+    <div class="cat-item">Berufstipps</div>
+    <div class="cat-item">Löhne & Gehälter</div>
+    <div class="cat-item">Senioren & Alltagshilfe</div>
+
+</div>
 
 <div id="results"></div>
 
