--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 
 <div id="results"></div>
 
+<div class="feedback-container">
+    <button id="feedbackBtn" class="feedback-btn">Anregungen & Feedback</button>
+</div>
+
+    
 <footer>
     Powered by LIGONE – Fair Consumer Technology
     <div style="margin-top:12px;">
