--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Market Shield – Fair informiert</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="app.js"></script>
+    <!-- Social Sharing Preview -->
+<meta property="og:title" content="Market Shield – Wissen für alle">
+<meta property="og:description" content="Die größte unabhängige Wissensquelle, die Menschen stärkt.">
+<meta property="og:image" content="https://ligone-token.github.io/marketshield/preview.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta name="twitter:card" content="summary_large_image">
+
 </head>
 
 <body>
