--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
     <button id="feedbackBtn" class="feedback-btn">Anregungen & Feedback</button>
 </div>
 
+<section id="gewinnspiel" class="info-box">
+  <h2>🎉 Monats-Gewinnspiel</h2>
+  <p>Jeden Monatsletzten verlosen wir <strong>10 €</strong> unter allen, die MARKET SHIELD unterstützen.</p>
+  <p><strong>Teilnahme:</strong> Infos folgen direkt in der App, sobald das Gewinnspiel aktiviert ist.</p>
+
+  <div id="winnerMessage" class="winner-message"></div>
+</section>
+
     
 <footer>
     Powered by LIGONE – Fair Consumer Technology
