--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 <meta name="twitter:card" content="summary_large_image">
+<script defer data-domain="ligone-token.github.io/marketshield" src="https://plausible.io/js/script.js"></script>
 
 </head>
 
