--- a/index.html
+++ b/index.html
@@ -2,22 +2,14 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Market Shield – Fair informiert</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="app.js"></script>
 
-    <!-- Social Sharing Preview -->
-    <meta property="og:title" content="Market Shield – Wissen für alle">
-    <meta property="og:description" content="Die unabhängige Wissensquelle, die Menschen stärkt.">
-    <meta property="og:image" content="https://ligone-token.github.io/marketshield/preview.jpg">
-    <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="styles.css">
 
-    <meta name="twitter:card" content="summary_large_image">
-
-    <!-- Analytics -->
-    <script defer data-domain="ligone-token.github.io/marketshield" src="https://plausible.io/js/script.js"></script>
+    <!-- Optional: Favicon -->
+    <link rel="icon" href="icon.png" type="image/png">
 </head>
 
 <body>
@@ -27,43 +19,35 @@
     <p class="subtitle">Fair informiert.</p>
 </header>
 
+<!-- SUCHFELD -->
 <div class="search-container">
     <input id="searchInput" type="text" placeholder="Produkt, Stoff oder Kategorie eingeben ...">
 </div>
 
+<!-- INFO ÜBER DER KATEGORIENLISTE -->
 <div class="sub-info">
     Über <strong>100.000 Einträge</strong> – fair informiert.
 </div>
 
+<!-- LINKS -->
 <div class="ligone-links">
     <a href="https://ligone.ch" target="_blank">Offizielle Seite</a> |
     <a href="https://ligone-token.github.io/ligone-web/" target="_blank">Token App</a>
 </div>
 
+<!-- KATEGORIEN-GRID -->
 <div class="category-grid"></div>
 
+<!-- RESULTATE -->
 <div id="results"></div>
 
-<div class="feedback-container">
-    <button id="feedbackBtn" class="feedback-btn">Anregungen & Feedback</button>
-</div>
-
-<section id="gewinnspiel" class="info-box">
-  <h2>🎉 Monats-Gewinnspiel</h2>
-  <p>Jeden Monatsletzten verlosen wir <strong>10 €</strong> unter allen, die MARKET SHIELD unterstützen.</p>
-  <p><strong>Teilnahme:</strong> Infos folgen direkt in der App, sobald das Gewinnspiel aktiviert ist.</p>
-
-  <div id="winnerMessage" class="winner-message"></div>
-</section>
-
+<!-- FOOTER -->
 <footer>
-    Powered by LIGONE – Fair Consumer Technology
-    <div style="margin-top:12px;">
-        <a href="stiftung.html" style="color:#0077cc; text-decoration:none; font-size:14px;">
-            Geplante LIGONE Stiftung (ab 2026)
-        </a>
-    </div>
+    Market Shield © 2025 – Ein Projekt für faire und klare Verbraucherinformationen.
 </footer>
+
+<!-- SCRIPT -->
+<script src="app.js"></script>
 
 </body>
 </html>
