--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Market Shield – Fair informiert</title>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- Optional: Favicon -->
     <link rel="icon" href="icon.png" type="image/png">
