--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 <!-- FOOTER -->
 <footer>
     Market Shield © 2025 – Ein Projekt für faire und klare Verbraucherinformationen.
+    <!-- LINK ZUR LIGONE STIFTUNG -->
+<div class="bottom-link">
+    <a href="stiftung.html" target="_blank">LIGONE Stiftung</a>
+</div>
+
 </footer>
 
 <!-- SCRIPT -->
