--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- Optional: Favicon -->
+    <!-- Favicon -->
     <link rel="icon" href="icon.png" type="image/png">
 </head>
 
@@ -44,12 +44,12 @@
 <!-- FOOTER -->
 <footer>
     Market Shield © 2025 – Ein Projekt für faire und klare Verbraucherinformationen.
-    <!-- LINK ZUR LIGONE STIFTUNG -->
-<div class="bottom-link">
-    <a href="stiftung.html" target="_blank">LIGONE Stiftung</a>
-</div>
-
 </footer>
+
+<!-- LINK ZUR LIGONE STIFTUNG -->
+<div class="bottom-link">
+    <a href="stiftung.html">LIGONE Stiftung</a>
+</div>
 
 <!-- SCRIPT -->
 <script src="app.js"></script>
