--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <!-- LINK ZUR LIGONE STIFTUNG -->
 <div class="bottom-link">
-    <a href="stiftung.html">LIGONE Stiftung</a>
+    <a href="stiftung.html">Über die LIGONE Stiftung</a>
 </div>
 
 <!-- SCRIPT -->
