--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <input id="searchInput" type="text" placeholder="Produkt, Stoff oder Kategorie eingeben ...">
 </div>
 
+<!-- 🔥 SUCHERGEBNISSE JETZT DIREKT HIER -->
+<div id="results"></div>
+
 <!-- INFO ÜBER DER KATEGORIENLISTE -->
 <div class="sub-info">
     Über <strong>100.000 Einträge</strong> – fair informiert.
@@ -37,9 +40,6 @@
 
 <!-- KATEGORIEN-GRID -->
 <div class="category-grid"></div>
-
-<!-- RESULTATE -->
-<div id="results"></div>
 
 <!-- FOOTER -->
 <footer>
@@ -56,4 +56,3 @@
 
 </body>
 </html>
-
