--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 <!-- FOOTER -->
 <footer>
     Market Shield © 2025 – Ein Projekt für faire und klare Verbraucherinformationen.
+    <div class="bottom-link">
+    <a href="impressum.html">Impressum</a> ·
+    <a href="datenschutz.html">Datenschutz</a>
+</div>
+
 </footer>
 
 <!-- LINK ZUR LIGONE STIFTUNG -->
