--- a/index.html
+++ b/index.html
@@ -74,4 +74,13 @@
 </html>
 
 </body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QBT1L9DKNW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QBT1L9DKNW');
+</script>
 </html>
