--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
     <!-- Favicon -->
     <link rel="icon" href="icon.png" type="image/png">
+    <meta property="og:title" content="Market Shield – Fair informiert">
+<meta property="og:description" content="Transparente Infos zu Inhaltsstoffen, Risiken und Verbraucherschutz.">
+<meta property="og:image" content="https://ligone-token.github.io/marketshield/preview.jpg">
+<meta property="og:url" content="https://ligone-token.github.io/marketshield/">
+<meta property="og:type" content="website">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://ligone-token.github.io/marketshield/preview.jpg">
+
 </head>
 
 <body>
