--- a/kinder-gesund.html
+++ b/kinder-gesund.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="de">
+<!DOCTYPE html>
+<html lang="de">
 <head>
   <meta charset="utf-8">
 
-  <title>Gesund beworben – aber für wen?</title>
+  <title>Erlaubt – aber für wen?</title>
 
-  <!-- 🔥 DAS ist der Hebel -->
-  <meta property="og:title" content="Gesund beworben – aber für wen?">
-  <meta property="og:description" content="Viele Inhaltsstoffe sind erlaubt, obwohl sie keinen Nutzen für Kinder haben.">
-  <meta property="og:image" content="https://marketshield.org/og/kinderprodukte.jpg">
+  <!-- 🔴 Open Graph: OHNE das gibt es KEIN Bild -->
+  <meta property="og:title" content="Erlaubt – aber für wen?">
+  <meta property="og:description" content="Viele Kinderprodukte enthalten Inhaltsstoffe, die erlaubt sind – aber keinen Nutzen haben.">
+  <meta property="og:image" content="https://marketshield.org/og/kinder-gesund-og.jpg">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://marketshield.org/kinder-gesund.html">
+
+  <!-- 🔵 Twitter / X -->
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://marketshield.org/og/kinder-gesund-og.jpg">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 
 <body>
   <h1>Gesund beworben – aber für wen?</h1>
