--- a/e951-aspartam.html
+++ b/e951-aspartam.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>E951 Aspartam – Wirkung, Risiken & Bewertung | Market Shield</title>
+<p>
+  🔍 <a href="./index.html">Weitere Einträge & Suche in Market Shield</a>
+</p>
 
     <meta name="description" content="Was ist E951 (Aspartam)? Wirkung, Risiken, wissenschaftliche Bewertung und für wen der Süßstoff problematisch sein kann. Sachlich erklärt.">
 
