--- a/surveys/umfrage-1.html
+++ b/surveys/umfrage-1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Umfrage – Zusatzstoffe & Transparenz | MarketShield</title>
+<title>Die Mehrheit denkt anders als erwartet. | MarketShield</title>
 
 <meta name="description" content="Kurze Umfrage zu Zusatzstoffen in Lebensmitteln. Deine Meinung zählt.">
 
@@ -79,10 +79,13 @@ function vote(answer) {
 
 function shareSurvey() {
   const text =
-`Sollten problematische Zusatzstoffe klarer gekennzeichnet werden?
-Ich habe abgestimmt – wie siehst du das?
+`Ich habe gerade bei einer Umfrage zu Zusatzstoffen abgestimmt.
 
+Was denkst DU – sollten problematische Stoffe klarer gekennzeichnet werden?
+
+👉 Jetzt abstimmen:
 ${SURVEY_LINK}`;
+
 
   if (navigator.share) {
     navigator.share({
