--- a/surveys/umfrage-1.html
+++ b/surveys/umfrage-1.html
@@ -72,7 +72,7 @@ function vote(answer) {
     <div style="margin:24px 0;">
       <button onclick="shareSurvey()">📢 Umfrage teilen</button>
       <br><br>
-      <button onclick="goMarketShield()">🔍 Zu MarketShield</button>
+      <button onclick="goMarketShield()">🔍 Zu MarketShield - Fair informiert!</button>
     </div>
   `;
 }
