--- a/surveys/umfrage-1.html
+++ b/surveys/umfrage-1.html
@@ -55,7 +55,7 @@
 
 <script>
 const MARKETSHIELD_LINK = "https://ligone-token.github.io/marketshield/";
-const SURVEY_LINK = "https://ligone-token.github.io/marketshield/surveys/umfrage-zusatzstoffe.html";
+const SURVEY_LINK = window.location.href;
 
 function vote(answer) {
   localStorage.setItem("ms_survey_1", answer);
