--- a/index.html
+++ b/index.html
@@ -51,18 +51,16 @@
 
 <!-- FOOTER -->
 <footer>
-    Market Shield © 2025 – Ein Projekt für faire und klare Verbraucherinformationen.
-    <div class="bottom-link">
+  <div class="footer-main">
+    MarketShield © 2025 – Ein Projekt für faire und klare Verbraucherinformationen.
+  </div>
+
+  <div class="footer-links">
     <a href="impressum.html">Impressum</a> ·
-    <a href="datenschutz.html">Datenschutz</a>
-</div>
-
-</footer>
-
-<!-- LINK ZUR LIGONE STIFTUNG -->
-<div class="bottom-link">
+    <a href="datenschutz.html">Datenschutz</a> ·
     <a href="stiftung.html">Über die LIGONE Stiftung</a>
-</div>
+  </div>
+</footer>
 
 <!-- SCRIPT -->
 <script src="app.js"></script>
