--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
   <h1>Market Shield</h1>
   <p class="subtitle">Fair informiert.</p>
 </header>
+<!-- COMMUNITY MELDEN BUTTON -->
+<section class="community-report">
+  <button id="reportBtn" class="report-btn">
+    <span class="report-title">Problem / Produkt melden</span>
+    <span class="report-sub">Anonym · in 1 Minute · hilft allen</span>
+  </button>
+</section>
 
 <div class="search-container">
   <input id="searchInput" type="text" placeholder="Produkt, Stoff oder Kategorie eingeben ...">
