--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   gtag('config', 'G-QBT1L9DKNW');
 </script>
 
- <!-- REPORT MODAL -->
+<!-- REPORT MODAL -->
 <div id="reportModal" class="report-modal">
   <div class="report-modal-box">
 
@@ -91,6 +91,10 @@
         <button type="button" id="closeReportModal">Schließen</button>
       </div>
     </form>
+
+  </div>
+</div>
+
 
   </div>
 </div>
