--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- COMMUNITY MELDEN BUTTON -->
 <section class="community-report">
   <button id="reportBtn" class="report-btn">
-    <span class="report-title">Problem / Produkt melden</span>
+    <span class="report-title">Produkt / Problem melden</span>
     <span class="report-sub">Anonym · in 1 Minute · hilft allen</span>
   </button>
 </section>
