--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   <h1>Market Shield</h1>
   <p class="subtitle">Fair informiert.</p>
 </header>
+  <div id="backHome" class="back-home" style="display:none;">
+  ← Zur Startseite
+</div>
+
 <!-- COMMUNITY MELDEN BUTTON -->
 <section class="community-report">
   <button id="reportBtn" class="report-btn">
