--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 
 <div id="results"></div>
 
+  <div id="shareBox"></div>
+
+
 <div class="sub-info">
   Über <strong>100.000 Einträge</strong> – fair informiert.
 </div>
