--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
   <input id="searchInput" type="text" placeholder="Produkt, Stoff oder Kategorie eingeben ...">
 </div>
 
-<div id="results"></div>
-
+<div id="results">
   <div id="shareBox"></div>
+</div>
+
 
 
 <div class="sub-info">
