--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <h1>Market Shield</h1>
   <p class="subtitle">Fair informiert.</p>
 </header>
-  <div id="backHome" class="back-home" style="display:none;">
+  <div id="backHome" class="back-home">
   ← Zur Startseite
 </div>
 
