--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://ligone-token.github.io/marketshield/preview.jpg">
+  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="fix.css">
+
 </head>
 
 <body>
