--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://ligone-token.github.io/marketshield/preview.jpg">
-  <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -26,7 +24,7 @@
   <h1>Market Shield</h1>
   <p class="subtitle">Fair informiert.</p>
 </header>
-  <div id="backHome" class="back-home">
+  <div id="backHome" class="back-home" style="display:none;">
   ← Zur Startseite
 </div>
 
@@ -73,6 +71,8 @@
   </div>
 </footer>
 
+<script src="app.js"></script>
+
 <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QBT1L9DKNW"></script>
 <script>
@@ -103,7 +103,12 @@
   </div>
 </div>
 
-<script src="app.js"></script>
- 
+
+  </div>
+</div>
+
+
+
+  
 </body>
 </html>
