--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
 
 <script src="app.js"></script>
 
+  <div id="msProgressBox" style="
+  position:fixed;
+  bottom:16px;
+  right:16px;
+  z-index:999;
+  font-family:inherit;
+">
+</div>
+
+
 <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QBT1L9DKNW"></script>
 <script>
