--- a/index.html
+++ b/index.html
@@ -119,6 +119,27 @@
 
 
 
+<div id="msReportFab"
+     title="Problem oder Anregung melden"
+     style="
+       position:fixed;
+       bottom:16px;
+       left:16px;
+       width:44px;
+       height:44px;
+       border-radius:50%;
+       background:#c62828;
+       color:#fff;
+       display:flex;
+       align-items:center;
+       justify-content:center;
+       font-size:20px;
+       cursor:pointer;
+       z-index:999;
+       box-shadow:0 4px 12px rgba(0,0,0,.25);
+     ">
+  ⚠️
+</div>
   
 </body>
 </html>
