--- a/index.html
+++ b/index.html
@@ -133,6 +133,22 @@
   ⚠️
 </div>
   <div id="msProgressBox"></div>
+<div id="ratingModal" class="modal">
+  <div class="modal-box">
+    <h3>Bewertung abgeben</h3>
 
+    <div id="ratingStars" style="font-size:28px;cursor:pointer;">
+      <span data-star="1">☆</span>
+      <span data-star="2">☆</span>
+      <span data-star="3">☆</span>
+      <span data-star="4">☆</span>
+      <span data-star="5">☆</span>
+    </div>
+
+    <button id="closeRatingModal">Abbrechen</button>
+  </div>
+</div>
+
+  
 </body>
 </html>
