--- a/index.html
+++ b/index.html
@@ -28,14 +28,6 @@
   ← Zur Startseite
 </div>
 
-<!-- COMMUNITY MELDEN BUTTON -->
-<section class="community-report">
-  <button id="reportBtn" class="report-btn">
-    <span class="report-title">Produkt / Problem melden</span>
-    <span class="report-sub">Anonym · in 1 Minute · hilft allen</span>
-  </button>
-</section>
-
 <div class="search-container">
   <input id="searchInput" type="text" placeholder="Produkt, Stoff oder Kategorie eingeben ...">
 </div>
@@ -132,7 +124,7 @@
   <div class="modal-box">
     <h3>Bewertung abgeben</h3>
 
-    <div id="ratingStars" style="font-size:28px;cursor:pointer;">
+<div id="ratingModalStars" style="font-size:28px;cursor:pointer;">
       <span data-star="1">☆</span>
       <span data-star="2">☆</span>
       <span data-star="3">☆</span>
