--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </script>
 
 <!-- REPORT MODAL -->
-<div id="ratingModal">
+<div id="reportModal">
   <div class="report-modal-box">
 
     <h2>Problem / Produkt melden</h2>
